--- a/Admin_Panel/Areas/LOC_City/Views/LOC_City/LOC_CityList.cshtml
+++ b/Admin_Panel/Areas/LOC_City/Views/LOC_City/LOC_CityList.cshtml
@@ -2,9 +2,12 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Layout = "~/Views/shared/_Layout.cshtml";
+    LOC_CityFilterModel FilterModel = new LOC_CityFilterModel();
 }
 @using System.Data
 @model DataTable
+@using Admin_Panel.Areas.LOC_City.Models;
 
 
 <br />
@@ -12,8 +15,44 @@
 <br />
 <br />
 
+<div class="container-fluid border border-dark p-4">
+    <form class="row">
+        <div>
+            <h2>Filter</h2>
+        </div>
+        <div class="col-3">
+            <select class="form-control" asp-for="@FilterModel.CountryID" asp-items="@(new SelectList(ViewBag.CountryList,"CountryID","CountryName"))">
+                <option value="">Select Country</option>
+            </select>
+        </div>
+        <div class="col-3">
+            <select class="form-control" asp-for="@FilterModel.StateID" asp-items="@(new SelectList(ViewBag.StateList,"StateID","StateName"))">
+                <option value="">Select State</option>
+            </select>
+        </div>
+        <div class="col-3">
+            <input type="text" class="form-control" asp-for="@FilterModel.CityName" placeholder="CityName" />
+        </div>
+        <div class="col-3">
+            <input type="text" class="form-control" asp-for="@FilterModel.CityCode" placeholder="CityCode" />
+        </div>
+        <div class="col-1 my-3 me-3">
+            <button class="btn btn-primary" type="submit" asp-area="LOC_City" asp-controller="LOC_City" asp-action="LOC_CityFilter">Search</button>
+        </div>
+
+        <div class="col-10 my-3">
+            <form>
+                <button class="btn btn-danger" type="submit" runat="server" OnClientClick="this.form.reset();return false;">Clear</button>
+            </form>
+        </div>
+    </form>
+</div>
+<br />
+<br />
+
+
 <a class="btn btn-success" asp-area="LOC_City" asp-controller="LOC_City" asp-action="LOC_CityAdd">Add New</a>
-<div class="search-field col-xl-4 ms-lg-auto d-flex">
+@* <div class="search-field col-xl-4 ms-lg-auto d-flex">
     <div class="me-3">
 
         <form class="d-flex" method="get" asp-area="LOC_City" asp-controller="LOC_City" asp-action="LOC_CitySearchByName">
@@ -21,7 +60,7 @@
             <div><button type="submit" class="btn btn-outline-success" value="Search" runat="server">Search</button></div>
         </form>
     </div>
-</div>
+</div> *@
 <br>
 
 <table class="table">
@@ -50,11 +89,11 @@
                 <td>@Convert.ToDateTime(dr["CreationDate"]).ToString("dd-MM-yyyy")</td>
                 <td>@Convert.ToDateTime(dr["Modified"]).ToString("dd-MM-yyyy")</td>
                 @*<td>
-                    <form>
-                        <button type="submit" class="btn btn-primary">Update</button>
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                    </form>
-                </td>*@
+            <form>
+            <button type="submit" class="btn btn-primary">Update</button>
+            <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
+            </td>*@
 
                 <td>
                     <form method="post" asp-area="LOC_City" asp-controller="LOC_City" asp-action="Delete">
