--- a/Admin_Panel/Areas/LOC_State/Views/LOC_State/LOC_StateList.cshtml
+++ b/Admin_Panel/Areas/LOC_State/Views/LOC_State/LOC_StateList.cshtml
@@ -3,28 +3,59 @@
 *@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    LOC_StateFilterModel filterModel = new LOC_StateFilterModel();
 }
 
 @using System.Data
 @model DataTable
+@using Admin_Panel.Areas.LOC_State.Models;
 
 
 <br />
 <h2 style="justify-content:center ">State List</h2>
 <br />
+
+<div class="container-fluid border border-dark p-4">
+    <form class="row">
+        <div><h2>Filter</h2></div>
+
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <div class="form-group col-4">
+            <label class="form-label">Country Name</label>
+            <div class="">
+                <select class="form-control" asp-for="@filterModel.CountryID" asp-items="@(new SelectList(ViewBag.CountryList,"CountryID","CountryName"))">
+                    <option value="">Select Country</option>
+                </select>
+                <span asp-validation-for="@filterModel.CountryID" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="col-4">
+            <lable class="form-label">Select Statename</lable>
+            <input type="text" placeholder="Select Statename" asp-for="@filterModel.StateName" class="form-control mt-2" id="inputAddress">
+        </div>
+        <div class="col-4">
+            <lable class="form-label">Select Statecode</lable>
+            <input type="text" placeholder="Select statecode" asp-for="@filterModel.StateCode" class="form-control mt-2" id="inputAddress">
+        </div>
+        <div class="col-1 my-3 me-3">
+            <button type="submit" class="btn btn-primary" asp-area="LOC_State" asp-controller="LOC_State" asp-action="LOC_StateFilter">
+                Search
+            </button>
+        </div>
+
+        <div class="col-10 my-3">
+
+            <form>
+                <button type="submit" class="btn btn-danger" runat="server" OnClientClick="this.form.reset();return false;">clear</button>
+            </form>
+        </div>
+    </form>
+</div>
 <br />
 
 <a class="btn btn-success" asp-area="LOC_State" asp-controller="LOC_State" asp-action="LOC_StateAdd">Add New</a>
-<div class="search-field col-xl-4 ms-lg-auto d-flex">
-    <div class="me-3">
 
-        <form class="d-flex" method="get" asp-area="LOC_State" asp-controller="LOC_State" asp-action="LOC_StateSearchByName">
-            <input class="form-control me-3" type="search" placeholder="Search" aria-label="Search" runat="server" name="StateName" />
-            <div><button type="submit" class="btn btn-outline-success" value="Search" runat="server">Search</button></div>
-        </form>
-    </div>
-</div>
-   
+
 <br>
 
 <table class="table">
@@ -50,12 +81,6 @@
                 <td>@dr["CountryName"]</td>
                 <td>@Convert.ToDateTime(dr["Created"]).ToString("dd-MM-yyyy")</td>
                 <td>@Convert.ToDateTime(dr["Modified"]).ToString("dd-MM-yyyy")</td>
-             
-                   @* <form>
-                        <button type="submit" class="btn btn-primary">Update</button>
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                    </form>*@
-
 
                 <td>
                     <form method="post" asp-area="LOC_State" asp-controller="LOC_State" asp-action="Delete">
@@ -69,7 +94,7 @@
                         <button type="submit" class="btn btn-primary" value="Edit">Update</button>
                     </form>
                 </td>
-               
+
             </tr>
         }
     </tbody>
